Page science d'ada en anglais

--- a/en/scienceada.html
+++ b/en/scienceada.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Science d'Ada</title>
+    <title>Science From Ada</title>
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -21,26 +21,26 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__title">La Science <br> d'Ada</h1>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
+        <h1 class="header__title">Science From Ada</h1>
+        <div class="language-selector" role="navigation" aria-label="language selector">
             <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
+                aria-label="Switch to English version">En</a>
         </div>
     </header>
 
     <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <button class="menu__toggle" aria-label="Open menu">
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
         </button>
 
-        <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
+        <div class="menu__overlay" role="dialog" aria-label="Main navigation menu">
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
                         style="background-image: url('../assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
@@ -52,13 +52,13 @@
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
                         style="background-image: url('../assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
+                        <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
                         style="background-image: url('../assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
+                        <span>Science From Ada</span>
                     </a>
                 </li>
                 <li>
@@ -70,19 +70,17 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
-                    projets</a>
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
+                    projects</a>
             </div>
         </div>
     </nav>
@@ -94,62 +92,59 @@
             </div>
         </section>
         <section class="section__title">
-            <h2>Qu’a t’elle crée?</h2>
+            <h2>What did she create?</h2>
         </section>
         <section class="Texte__principal-science">
             <div class="navyblue__block">
-                <div class="textmono-title">Son innovation</div>
-                <p>Ada Lovelace a créé le tout premier programme informatique en 1843, conçu pour être exécuté sur la
-                    machine analytique de Charles Babbage.
-                    Concrètement, elle a rédigé un algorithme permettant à la machine de calculer les nombres de
-                    Bernoulli, posant ainsi les bases de la programmation moderne. Dans ses fameuses Notes, elle a aussi
-                    anticipé le potentiel des machines à traiter non seulement des nombres, mais aussi des symboles, de
-                    la musique ou des images, démontrant une vision révolutionnaire de l’informatique.</p>
+                <div class="textmono-title">Her innovation</div>
+                <p>Ada Lovelace created the very first computer program in 1843, designed to be executed on Charles
+                    Babbage's analytical engine.
+                    Specifically, she wrote an algorithm allowing the machine to compute Bernoulli numbers, thereby
+                    laying the foundations of modern programming. In her famous Notes, she also anticipated the
+                    potential of machines to process not only numbers but also symbols, music, or images, demonstrating
+                    a revolutionary vision of computing.</p>
             </div>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image1_page_Science.avif" alt="Image de la machine analytique" loading="lazy">
+            <img src="../assets/img/Image1_page_Science.avif" alt="Image of the analytical engine" loading="lazy">
         </section>
         <section class="text__main">
-            <h2 class="textmono-title">Comment a-t-elle fait?
-                <h3 class="textmono-content">Chargée de traduire un article rédigé par le mathématicien italien Luigi
-                    Menabrea, Ada y ajoute de nombreuses notes personnelles, trois fois plus longues que le texte
-                    original. Dans la dernière de ces notes, appelée Note G, elle conçoit un algorithme détaillé
-                    permettant à la machine de calculer les nombres de Bernoulli, considéré aujourd’hui comme le premier
-                    programme informatique de l’histoire.</h3>
+            <h2 class="textmono-title">How did she do it?
+                <h3 class="textmono-content">Entrusted with translating an article written by the Italian mathematician
+                    Luigi
+                    Menabrea, Ada added numerous personal notes, three times longer than the original text.
+                    In the last of these notes, called Note G, she designed a detailed algorithm allowing the machine to
+                    compute Bernoulli numbers, considered today as the first computer program in history.</h3>
             </h2>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image2_page_Science.avif" alt="Image de la note G" loading="lazy">
+            <img src="../assets/img/Image2_page_Science.avif" alt="Image of Note G" loading="lazy">
         </section>
         <section class="citation">
             <blockquote>
-                <p>« L’imagination est la faculté de découverte, par excellence. C’est celle qui pénètre dans les mondes
-                    invisibles qui nous entourent, les mondes de la science. »»</p>
+                <p>"The more I study, the more I feel insatiable."</p>
             </blockquote>
         </section>
-        <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
+        <h2 class="citation__personne">Quote from Ada Lovelace</h2>
         <section class="info-box">
-            <h3 class="info-box__title">De plus,</h3>
+            <h3 class="info-box__title">Moreover,</h3>
             <div class="info-box__content">
-                <p>Au-delà de ce programme, Ada Lovelace a envisagé de manière visionnaire que la machine pourrait
-                    manipuler non seulement des nombres, mais aussi des symboles, des lettres, et potentiellement
-                    produire de la musique ou des images, anticipant ainsi le concept moderne d’un ordinateur
-                    polyvalent.</p>
+                <p>Beyond this program, Ada Lovelace envisioned in a visionary way that the machine could manipulate not
+                    only numbers but also symbols, letters, and potentially produce music or images, thus anticipating
+                    the modern concept of a versatile computer.</p>
             </div>
         </section>
         <section class="text__main">
-            <h3 class="textmono-content">En plus de ses travaux informatiques, Ada s’est aussi intéressée à la théorie
-                des probabilités, utilisant ses compétences pour des applications pratiques comme les jeux de hasard.
-                Elle a également tenté de soutenir financièrement la construction de la machine analytique, malgré des
-                difficultés économiques.</h3>
+            <h3 class="textmono-content">In addition to her work in computing, Ada was also interested in probability
+                theory, using her skills for practical applications such as gambling. She also attempted to financially
+                support the construction of the analytical engine, despite economic difficulties.</h3>
             </h2>
         </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
             <div class="footer__logo">
-                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image of the Ada Lovelace logo "></a>
             </div>
             <div class="footer__leftelement">
                 <p>CONTACT</p>
@@ -158,23 +153,23 @@
                 </div>
             </div>
             <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
+                <p>LEGAL NOTICE</p>
                 <div class="footer__leftelement-text">
-                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
+                    <p>“project carried out in 2025 as part of an educational exercise at the MMi department of
                         Montbéliard“</p>
                 </div>
             </div>
         </div>
 
         <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
+            <a href="glossaire.html" class="footer__rightelement">Glossary</a>
+            <a href="contact.html" class="footer__rightelement">Contact Us</a>
+            <a href="a-propos.html" class="footer__rightelement">About</a>
+            <a href="autres-projets.html" class="footer__rightelement">Other Projects</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-                <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
+                class="footer__logoMMi" aria-label="Visit the MMi department website (new window)">
+                <img src="../assets/img/MMI_logo.svg" alt="MMi Logo">
             </a>
         </div>
     </footer>
